--- a/portfolio.css
+++ b/portfolio.css
@@ -1,3 +1,8 @@
+/*!
+ * Start Bootstrap - Landing Page Bootstrap Theme (http://startbootstrap.com)
+ * Code licensed under the Apache License v2.0.
+ * For details, see http://www.apache.org/licenses/LICENSE-2.0.
+ */
 
 body,
 html {
@@ -26,11 +31,7 @@ h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-<<<<<<< HEAD
     background: url(http://wallcrisp.com/wp-content/uploads/2014/09/Rough-Black-tech-desktop-wallpaper.jpg) no-repeat center center;
-=======
-    background: url(../img/intro-bg.jpg) no-repeat center center;
->>>>>>> fcccffb986257e0cc6114a544814c541738d5268
     background-size: cover;
 }
 
