--- a/portfolio.css
+++ b/portfolio.css
@@ -50,7 +50,7 @@ h6 {
 .intro-divider {
     width: 400px;
     border-top: 1px solid #f8f8f8;
-    border-bottom: 1px solid rgba(0,0,0,0.2);
+    border-bottom: 1px dotted rgba(0,0,0,0.2);
 }
 
 .intro-message > h3 {
