--- a/portfolio.css
+++ b/portfolio.css
@@ -131,6 +131,28 @@ h6 {
     margin-top: 0;
 }
 
+.img-center{
+
+    margin: 0 auto;
+    padding-left: 55px;
+}
+
+/* Image zoom section
+
+ =======| NOT PUBLISHED on portfolioEnchancents branch  |========
+ 
+.img-zoom{
+
+    height:100%;
+}
+
+.img-zoom:hover{
+
+    height:110%;
+}
+
+*/
+
 @media(max-width:1199px) {
     ul.banner-social-buttons {
         float: left;
