--- a/portfolio.css
+++ b/portfolio.css
@@ -172,6 +172,11 @@ h6 {
 }
 
 @media(max-width:767px) {
+    
+    body{background-color: red;}
+
+    
+
     .banner h2 {
         margin: 0;
         text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
