--- a/portfolio.css
+++ b/portfolio.css
@@ -63,6 +63,14 @@ h6 {
     padding-bottom: 15px;
 }
 
+.contact-form {
+    margin-top:70px;
+}
+
+footer{
+    position: relative;
+    top: 170px;
+}
 
 
 @media(max-width:1199px) {
@@ -130,6 +138,7 @@ h6 {
     color: #f8f8f8;
     background: url(../img/banner-bg.jpg) no-repeat center center;
     background-size: cover;
+    background-color: red;
 }
 
 .banner h2 {
@@ -213,10 +222,9 @@ h6 {
 
 
 footer {
-    padding: 50px 0;
-    background-color: #f8f8f8;
+    padding: 15px auto;
 }
 
 p.copyright {
-    margin: 15px 0 0;
+    margin: 0 0 0;
 }
